# jamswap

./: .gitignore  Makefile  README.md  dex  docker-compose.differential.yml  docker-compose.lasair6-monitor.yml  docker-compose.lasair6.yml  docker-compose.load.yml  docker-compose.mixed-dex.yml  docker-compose.mixed.yml  docker-compose.monitor.yml  docker-compose.pj-majority.yml  docker-compose.quic.yml  docker-compose.standard.yml  docker-compose.testnet.yml  docker-compose.yml
.github/workflows/: ci.yml
crates/committee/: Cargo.toml
crates/committee/src/: main.rs
crates/match-engine/: Cargo.toml
crates/match-engine/src/: auth.rs  lib.rs  wire.rs
crates/match-engine/tests/: scenarios.rs
crates/setops/: Cargo.toml
crates/setops/src/: lib.rs
crates/vdec/: Cargo.toml
crates/vdec/src/: lib.rs
differential/: Dockerfile.polkajam  differential.py  driver.py
docs/: ARCHITECTURE.md  COMMITTEE_DEPLOYMENT.md  DESIGN_QUESTIONS.md  DEX_FUZZER.md  DIFFERENTIAL_TESTNET.md  FUZZ_RALPH_PROMPT.md  HOW_IT_WORKS.md  JAMKB.md  JAMKB_IN_PRACTICE.md  JAMKB_STANDARD.md  LASAIR_INTERNALS.md  LASAIR_TESTNET_FORK_DIAGNOSIS.md  LOCAL_BUILDER.md  M1_DEMO.md  MIXED_CHAIN_DEX_SETTLEMENT.md  NETS.md  OBSERVABILITY_PLAN.md  PLAN.md  REVENUE.md  RUNNING.md  SEALED_ORDERS.md  SEALED_ORDER_ROBUSTNESS.md  SECURITY.md  SOAK_RELIABILITY.md  STATUS.md  TESTING.md  THROUGHPUT.md  TOKENS.md
k8s/: loadgen.yaml
mixed/: Dockerfile.polkajam  README.md  gen-spec.py  pj-entrypoint.sh  verify.sh
monitor/: Dockerfile  exporter.py  prometheus.lasair6.yml  prometheus.yml
monitor/grafana/: gen_dashboards.py
monitor/grafana/dashboards/: jam-clients.json  jam-finality.json  jam-mixed.json  jam-node.json  jam-service.json  jamswap-accounts.json
monitor/grafana/provisioning/dashboards/: provider.yml
offchain/: Dockerfile  canary.py  clearing.py  deploy.py  dex_fuzz.py  gate3a_soak.py  loadgen.py  metrics.py  order_telemetry.py  round.py  server.py  soak_verdict.py  test_enc_round.py  test_sealed_resting_e2e.py  trade_stream.py  treasury.py  verify.py
offchain/tests/: test_backpressure.py  test_beneficiary.py  test_clearing.py  test_executions.py  test_jamkb_standard.py  test_order_lifetime.py  test_round_lifecycle.py  test_sealed_carry.py  test_trade_tape.py  test_treasury.py
offchain/web/: index.html
service/: Cargo.toml  jamswap-service.jam
service/src/: lib.rs
sim/: demo.py
sim/engine-sim/: Cargo.toml
sim/engine-sim/src/: main.rs
